fixed sidebar text spacing

--- a/everyloan/wp-content/themes/responsive/style.css
+++ b/everyloan/wp-content/themes/responsive/style.css
@@ -1804,7 +1804,7 @@ ul.repay {list-style-type:none; width:167px; padding:0; float:left}
 .repay li {list-style-type:none; font-size:12px;}
 
 .lightbulb{float:left; background:url(http://termlifequotetoday.com/everyloan/wp-content/themes/responsive/core/images/lightbulb.jpg) no-repeat; 
-padding:10px 0 0 60px; list-style-type:none; width:180px; height:68px;}
+padding:10px 0 0 70px; list-style-type:none; width:180px; height:68px;}
 
 
 .calculator{float:left; background:url(http://termlifequotetoday.com/everyloan/wp-content/themes/responsive/core/images/calculator.jpg) no-repeat; 
@@ -3850,6 +3850,15 @@ BDO[DIR="rtl"] {
 \------------------------------------------*/
 
 /*------------------------------------------\
+|               Sidebar                     |
+\------------------------------------------*/
+.bulb-list,
+.calc-list
+{
+  padding-left:15px;
+}
+
+/*------------------------------------------\
 |            Top Menu                       |
 \------------------------------------------*/
 
@@ -3858,14 +3867,13 @@ BDO[DIR="rtl"] {
 
 #menu-topmenu-1 ul.sub-menu
 {
-   border-right:1px solid #ccc;
+  border-right:1px solid #ccc;
   border-left:1px solid #ccc; 
 }
 
 #menu-topmenu .sub-menu { 
   margin-top:0px; 
 }
-
 
 /*------------------------------------------\
 |            How it works                   |
@@ -3885,6 +3893,7 @@ BDO[DIR="rtl"] {
 /*------------------------------------------\
 |         Advice and articles               |
 \------------------------------------------*/
+
  .advice-and-article-title h1
 {
   font-family: 'heroregular' !important; 
